# graph_writer

./: .gitignore  cycle_eval_ch.jsonl  cycle_eval_en.jsonl  cycle_train_task.jsonl  example_tasks.jsonl  export_md.py  main.py  make_dag.py  pyproject.toml  test.py  test_lora-inference.py
WritingBench/: calculate_scores.py  evaluate_benchmark.py  generate_response.py  generate_response_agent.py
WritingBench/evaluator/: critic.py  llm.py
WritingBench/runs/: results.xlsx
data/original_content/: output_20251108_201946.jsonl  output_20251108_202314.jsonl  output_20251108_202551.jsonl  output_20251112_130812.jsonl
data/refined_content/: refined_20251112_130812.jsonl
data/task/: task_planning_20251108_201946.jsonl  task_planning_20251108_202314.jsonl  task_planning_20251108_202551.jsonl  task_planning_20251112_130812.jsonl
data/tmp/: out.jsonl  test.jsonl
prompts/: chapter.txt  judge.txt  outline.txt  refine.txt  task.txt
scripts/: transform_benchmark_to_train_task.py
src/: config.py  embeddings.py  generator.py  io_utils.py  judger.py  planning.py  refiner.py
test/: test_config.py  test_embeddings.py  test_generator.py  test_init.py  test_io_utils.py  test_judger.py  test_planning.py  test_refiner.py
train/: classify_merged_sft.py  main.py  merge_qwen_sft.py  pre_tokenize_qwen3.py  trainer.py
train/scripts/: run_lora.ps1  run_lora.sh
